--- a/index.html
+++ b/index.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/responsive-styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
   <article class="card">
-    Equilibrium #3429
-  
-    Our Equilibrium collection promotes balance and calm.
-  
-    0.041 ETH
-    3 days left
-    
-    Creation of Jules Wyvern
+    <img class="cube" src="/images/image-equilibrium.jpg" alt="equilibrium">
+
+    <h1 class="title">Equilibrium #3429</h1>
+
+    <p class="detail">Our Equilibrium collection promotes balance and calm.</p>
+
+    <div class="info flex">
+      <span><img src="/images/icon-ethereum.svg" alt=""></span>
+      <h4 class="coin">0.041 ETH</h4>
+      <span><img src="/images/icon-clock.svg" alt=""></span>
+      <h4 class="time">3 days left</h4>
+    </div>
+
+    <hr>
+
+    <div class="creator flex">
+      <img src="/images/image-avatar.png" alt="pfp">
+      <p>Creation of </p>
+      <p>Jules Wyvern</p>
+    </div>
   </article>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
