--- a/index.html
+++ b/index.html
@@ -21,28 +21,29 @@
 
 <body>
 
-  <article class="card">
-    <img class="cube" src="/images/image-equilibrium.jpg" alt="equilibrium">
-
-    <h1 class="title">Equilibrium #3429</h1>
-
-    <p class="detail">Our Equilibrium collection promotes balance and calm.</p>
-
-    <div class="info flex">
-      <span><img src="/images/icon-ethereum.svg" alt=""></span>
-      <h4 class="coin">0.041 ETH</h4>
-      <span><img src="/images/icon-clock.svg" alt=""></span>
-      <h4 class="time">3 days left</h4>
-    </div>
-
-    <hr>
-
-    <div class="creator flex">
-      <img src="/images/image-avatar.png" alt="pfp">
-      <p>Creation of </p>
-      <p>Jules Wyvern</p>
-    </div>
-  </article>
+  <body>
+    <article class="card">
+      <img class="cube" src="/images/image-equilibrium.jpg" alt="Equilibrium #3429">
+  
+      <h1 class="title">Equilibrium #3429</h1>
+  
+      <p class="detail">Our Equilibrium collection promotes balance and calm.</p>
+  
+      <div class="info flex">
+        <span class="icon"><img src="/images/icon-ethereum.svg" alt="Ethereum Icon"><h4 class="coin">0.041 ETH</h4></span>
+        
+        <span class="icon"><img src="/images/icon-clock.svg" alt="Clock Icon"><h4 class="time">3 days left</h4></span>
+        
+      </div>
+  
+      <hr>
+  
+      <div class="creator flex">
+        <img class="avatar" src="/images/image-avatar.png" alt="Avatar of Jules Wyvern">
+        <p>Creation of <span class="creator-name">Jules Wyvern</span></p>
+      </div>
+    </article>
+  </body>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
