--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
   <body>
     <article class="card">
-      <img class="cube" src="/images/image-equilibrium.jpg" alt="Equilibrium #3429">
+      <a class="cube-link"><img class="cube" src="/images/image-equilibrium.jpg" alt="Equilibrium #3429"></a>
   
-      <h1 class="title">Equilibrium #3429</h1>
+      <a class="title">Equilibrium #3429</a>
   
       <p class="detail">Our Equilibrium collection promotes balance and calm.</p>
   
@@ -40,15 +40,17 @@
   
       <div class="creator flex">
         <img class="avatar" src="/images/image-avatar.png" alt="Avatar of Jules Wyvern">
-        <p>Creation of <span class="creator-name">Jules Wyvern</span></p>
+        <p>Creation of<a class="creator-name"> Jules Wyvern</a></p>
       </div>
     </article>
   </body>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Juan Vega</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
