--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
   <body>
     <article class="card">
-      <a class="cube-link"><img class="cube" src="/images/image-equilibrium.jpg" alt="Equilibrium #3429"></a>
+      <div class="cube-link">
+        <img class="cube" src="/images/image-equilibrium.jpg" alt="Equilibrium #3429">
+        <div class="middle">
+            <img class="view" src="/images/icon-view.svg" alt="view">
+        </div>
+      </div>
   
       <a class="title">Equilibrium #3429</a>
   
