--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <body>
     <article class="card">
       <div class="cube-link">
-        <img class="cube" src="/images/image-equilibrium.jpg" alt="Equilibrium #3429">
+        <img class="cube" src="./images/image-equilibrium.jpg" alt="Equilibrium #3429">
         <div class="middle">
-            <img class="view" src="/images/icon-view.svg" alt="view">
+            <img class="view" src="./images/icon-view.svg" alt="view">
         </div>
       </div>
   
@@ -34,16 +34,16 @@
       <p class="detail">Our Equilibrium collection promotes balance and calm.</p>
   
       <div class="info flex">
-        <span class="icon"><img src="/images/icon-ethereum.svg" alt="Ethereum Icon"><h4 class="coin">0.041 ETH</h4></span>
+        <span class="icon"><img src="./images/icon-ethereum.svg" alt="Ethereum Icon"><h4 class="coin">0.041 ETH</h4></span>
         
-        <span class="icon"><img src="/images/icon-clock.svg" alt="Clock Icon"><h4 class="time">3 days left</h4></span>
+        <span class="icon"><img src="./images/icon-clock.svg" alt="Clock Icon"><h4 class="time">3 days left</h4></span>
         
       </div>
   
       <hr>
   
       <div class="creator flex">
-        <img class="avatar" src="/images/image-avatar.png" alt="Avatar of Jules Wyvern">
+        <img class="avatar" src="./images/image-avatar.png" alt="Avatar of Jules Wyvern">
         <p>Creation of<a class="creator-name"> Jules Wyvern</a></p>
       </div>
     </article>
