minor bug adjustments

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <p class="detail">Our Equilibrium collection promotes balance and calm.</p>
   
       <div class="info flex">
-        <span class="icon"><img src="./images/icon-ethereum.svg" alt="Ethereum Icon"><h4 class="coin">0.041 ETH</h4></span>
+        <span class="icon"><img src="./images/icon-ethereum.svg" alt="Ethereum Icon"><p class="coin">0.041 ETH</p></span>
         
-        <span class="icon"><img src="./images/icon-clock.svg" alt="Clock Icon"><h4 class="time">3 days left</h4></span>
+        <span class="icon"><img src="./images/icon-clock.svg" alt="Clock Icon"><p class="time">3 days left</p></span>
         
       </div>
   
